# LLM-UAV-FairRouting

./: .env.example  .gitignore  README.md  README_TRAINING.md  download_hf.py  occupy_tmp.sh  paper_core.md  pyproject.toml  readme_training_selection.md  requirements.txt  test.py
env/: install_verl_grpo.sh  install_vllm_on_gpu_node.sh  verl-grpo-conda.yaml  verl-grpo-requirements-lock.txt
evals/: build_pre_post_eval_summary.py  build_single_model_eval_summary.py  compare_solver_outputs.py  eval_config.yaml  eval_priority_alignment.py  eval_priority_operational_impact.py  evals.py
scripts/: aggregate_rank_only_evals.py  analyze_hard_eval_subtypes.py  analyze_s1_solver_comparison.py  analyze_s2_timing.py  analyze_s3_case_study.py  audit_llm3_data_quality.py  audit_llm3_prompt_lengths.py  backfill_qwen3_seed4112_eval.sh  build_daily_demand_dialogues.sh  build_hard_packed_operational.py  build_training_data.sh  build_training_data_sharded_nohup.sh  eval_efficiency.py  eval_existing_sft_models.py  eval_extraction_quality.py  eval_formal_comparison.py  eval_llm_selection_models.py  eval_p3_gpt4o_vs_finetuned.sh  eval_pre_post_nsga.sh  eval_pre_post_operational_sampled.sh  eval_pre_post_priority_alignment.sh  eval_pre_post_tiered.sh  eval_priority_alignment_all.py  eval_single_model_priority_alignment.sh  export_llm3_to_verl_grpo.py  export_llm3_to_verl_sft.py  export_llm_selection_compact.py  export_sft_ckpt_to_hf.sh  export_training_curves.py  export_training_curves.sh  jsonl_to_parquet.py  llm3_verl_utils.py  loRA_to_merged.py  plot_experiment_figures.py  plot_llm3_training_curves_ggplot.py  plot_manuscript_figures.py  plot_three_model_training_effect.py  plot_training_effect_from_eval_csv.py  rebuild_verl_env.sh  resume_eval_3gpu_llm_only_cluster.sh  (+22 more)
slurm/: run_routeA_m0abc.slurm  run_routeA_m1.slurm  run_routeA_m1sft_p1.slurm  run_routeA_m1sft_p2.slurm  run_routeB_m0abc.slurm  run_routeB_m1.slurm  submit_routeA.sh  submit_routeA_m1sft.sh  submit_routeB.sh
tests/: test_aggregate_rank_only_evals.py  test_analyze_hard_eval_subtypes.py  test_assignment_model.py  test_build_pre_post_eval_summary.py  test_building_data.py  test_building_information.py  test_compare_solver_outputs.py  test_demand_dialogue_dataset.py  test_demand_event_generation.py  test_demand_extraction.py  test_dialogue_generation.py  test_dialogue_generator.py  test_eval_existing_sft_models.py  test_eval_priority_alignment.py  test_eval_priority_operational_impact.py  test_heuristic_assignment.py  test_llm_client_utils.py  test_nsga3_search.py  test_path_costs.py  test_priority_semantics.py  test_quality_gates.py  test_ranking_prompt_utils.py  test_rrt_visualization.py  test_run_20_window_comparison_csv.py  test_run_extract100_eval_then_plan1.py  test_run_independent_window_nsga3_experiment.py  test_run_workflow.py  test_runtime_env.py  test_seed_priority_baseline.py  test_solver_adapter.py  test_solver_analytics.py  test_solver_runner.py  test_split_hard_eval_windows.py  (+6 more)
(+963 files in other folders)
