[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-delivery-pipeline"
version = "0.1.0"
description = "Independent drone medical delivery pipeline extracted from LLMOPT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "numpy",
  "pandas",
  "pyomo",
  "matplotlib",
  "openpyxl",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
