[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-delivery-pipeline"
version = "0.1.0"
description = "Independent drone medical delivery pipeline extracted from LLMOPT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "numpy",
  "pandas",
  "pyomo",
  "matplotlib",
  "openpyxl",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
drone-module1 = "drone_pipeline.scripts.module1_generate_dialogues:main"
drone-module2 = "drone_pipeline.scripts.module2_extract_demands:main"
drone-module3a = "drone_pipeline.scripts.module3_adjust_weights:main"
drone-module3b = "drone_pipeline.scripts.module3_solve:main"
drone-pipeline = "drone_pipeline.scripts.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
