[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4fairrouting"
version = "0.1.0"
description = "Shared LLM workflow and baseline routing core for fair drone delivery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "numpy",
  "pandas",
  "pyomo",
  "scipy",
  "matplotlib",
  "openpyxl",
  "pymoo",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
llm4fairrouting-dialogue = "llm4fairrouting.llm.dialogue_generation:main"
llm4fairrouting-demand = "llm4fairrouting.llm.demand_extraction:main"
llm4fairrouting-demand-events = "llm4fairrouting.data.demand_event_generation:main"
llm4fairrouting-demand-dialogues = "llm4fairrouting.data.demand_dialogue_dataset:main"
llm4fairrouting-training-data = "llm4fairrouting.data.training_dataset_builder:main"
llm4fairrouting-priority = "llm4fairrouting.llm.priority_inference:main"
llm4fairrouting-solver = "llm4fairrouting.workflow.solver_adapter:main"
llm4fairrouting-workflow = "llm4fairrouting.workflow.run_workflow:main"
llm4fairrouting-baseline-seed = "llm4fairrouting.baselines.cplex_with_seed_priorities:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
